[project]
name = "autolog"
version = "0.1.0"
requires-python = ">=3.9,<3.14"
dependencies = [
"requests > 2.32.3",
"pyepics > 3.5.7",
"pybase64 > 1.4.0",
"urllib3 > 1.26.6",
"cerberus > 1.3.7",
"tomli (>=2.4.0,<3.0.0)",
 ]

[tool.poetry]
description = "Create automatically a log into Phoebus-Olog server, triggered by an EPICS PV."
authors = ["Antoine Choquet <antoine.choquet@cea.fr>"]
readme = "README.md"

[dependency-groups]
dev = [
"pyinstaller > 6.12.0",
"pytest > 8.4.0",
"caproto > 1.2.0"
]

[project.scripts]
autolog = "autolog.autolog:main"
build = "scripts.build:install"

[tool.pytest.ini_options]
testpaths = [ "tests/pytest" ]
markers = [
    "unit: marks tests as unit",
    "cac",
    "log_content",
    "utils",
    "requests",
    "log_content",
    "config",
    "autolog"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
