[project]
name = "autolog"
version = "0.1.0"
requires-python = ">=3.9,<3.14"
dependencies = [
  "cerberus (>=1.3.8,<2.0.0)",
  "pyepics > 3.5.7",
  "requests > 2.32.3",
  "tomli (>=2.2.1,<3.0.0)",
]

[project.scripts]
autolog = "autolog.autolog:main"
build = "scripts.build:install"

[dependency-groups]
dev = ["caproto > 1.2.0", "pyinstaller > 6.12.0", "pytest > 8.4.0"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
description = "Create automatically a log into Phoebus-Olog server, triggered by an EPICS PV."
authors = ["Antoine Choquet <antoine.choquet@cea.fr>"]
readme = "README.md"

[tool.pytest.ini_options]
markers = [
  "unit: marks tests as unit",
  "cac",
  "log_content",
  "utils",
  "requests",
  "config",
  "autolog"
]
testpaths = ["tests/pytest"]
